--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 	display: grid;
 	grid-template-columns:1fr 2fr 2fr 1fr; 
 	grid-template-rows: 1fr;
-	margin-left: 2em;
+	
 
 
 
@@ -22,6 +22,7 @@ body{
 	margin-top: 2em;
 	grid-column-start: 1;
 	grid-row-start: 1;
+	margin-left: 1em;
 	
 }
 
